Added email field in Checkout Form

--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -18,6 +18,11 @@
                             formControlName="lastName">
                     </div>
                     <div class="form-group">
+                        <label for="email">Email Id</label>
+                        <input type="email" class="form-control" id="email" placeholder="Enter Email Id"
+                            formControlName="email">
+                    </div>
+                    <div class="form-group">
                         <label for="contact">Contact Number</label>
                         <input type="text" class="form-control" id="contact" placeholder="Enter Contact Number"
                             formControlName="contactNo">
